[package]
name = "codeviz_common"
version = "0.2.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/udoprog/codeviz"
homepage = "https://github.com/udoprog/codeviz"
documentation = "https://docs.rs/codeviz"
description = """
Flexible code generator for Rust
"""

[dependencies]
error-chain = "0.11"
