[package]
name = "codeviz_js"
version = "0.2.2"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/udoprog/codeviz"
homepage = "https://github.com/udoprog/codeviz"
documentation = "https://docs.rs/codeviz_js"
description = """
Flexible code generator for Rust
"""

[dependencies.codeviz_common]
version = "0.2.2"
path = "../common"
