[package]
name = "codeviz_rust"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/udoprog/codeviz"
homepage = "https://github.com/udoprog/codeviz"
documentation = "https://docs.rs/codeviz_rust"
description = """
Flexible code generator for Rust
"""

[dependencies.codeviz_common]
version = "0.1.0"
path = "../common"
